@@ -2,6 +2,7 @@
 - Allow precision strikes to target tile improvements
 - Overhaul implementation of shared visibility for simplicity and correctness
 - Update UI after stack bombarding (fixes bombard button not disappearing for multi-move units w/o blitz)
+- Fix crash caused by previous fix for incorrect ETAs w/ limited railroad movement
 
 * RELEASE 16G
 - Fix two bugs in shared hotseat visibility
